# atompaint

./: .gitignore  .gitlint  .gitmodules  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
atompaint/: __init__.py  checkpoints.py  conditioning.py  config.py  diagnostics.py  downsample.py  eval.py  field_types.py  layers.py  loss.py  mask.py  nonlinearities.py  pooling.py  time_embedding.py  transform_pred.py  type_hints.py  upsampling.py  util.py  utils.py
atompaint/analysis/: plot_metrics.py
atompaint/autoencoders/: asym_unet.py  semisym_unet.py  sym_unet.py  unet.py  vae.py
atompaint/classifiers/: amino_acid.py  neighbor_loc.py
atompaint/datasets/: _voxelize.cc  atoms.py  coords.py  samplers.py  voxelize.py
atompaint/datasets/transform_pred/: __init__.py  cli.py  neighbor_count.py
atompaint/diagnostics/shared_mem/: __main__.py  analysis.py  profiler.py
atompaint/diffusion/: data.py  ho2020.py  karras2022.py  time_embedding.py
atompaint/encoders/: asym_densenet.py  asym_resnet.py  cnn.py  densenet.py  encoder.py  layers.py  resnet.py  sym_densenet.py  sym_resnet.py
atompaint/end_to_end/: callback.py  data.py  task.py
atompaint/hpc/: slurm.py
atompaint/hpc/slurm/: requeue.py  sbatch.py  utils.py
atompaint/metrics/: neighbor_loc.py  wrappers.py
atompaint/transform_pred/: __init__.py  fourier.py  loss.py  models.py  training.py
atompaint/transform_pred/datasets/: _classification.py.bkup  classification.py  cli.py  neighbor_count.py  origins.py  recording.py  regression.py  utils.py
docs/: Makefile  basic_usage.rst  conf.py
pymol/: ap_helpers.py
tests/: conftest.py  test_autoencoders_asym_unet.nt  test_autoencoders_asym_unet.py  test_autoencoders_semisym_unet.py  test_autoencoders_sym_unet.nt  test_autoencoders_sym_unet.py  test_autoencoders_sym_vae.py  test_autoencoders_unet.py  test_autoencoders_vae.py  test_classifiers_amino_acid.py  test_classifiers_neighbor_loc.nt  test_classifiers_neighbor_loc.py  test_conditioning.py  test_datasets_atoms.nt  test_datasets_atoms.py  test_datasets_coords.py  test_datasets_transform_pred.nt  test_datasets_transform_pred.py  test_datasets_voxelize.nt  test_datasets_voxelize.py  test_diffusion_data.nt  test_diffusion_data.py  test_diffusion_karras2022.nt  test_diffusion_karras2022.py  test_diffusion_time_embedding.py  test_downsample.py  test_encoders_asym_densenet.py  test_encoders_asym_resnet.py  test_encoders_cnn.py  test_encoders_densenet.py  test_encoders_layers.py  test_encoders_resnet.py  test_encoders_sym_densenet.py  test_encoders_sym_resnet.py  test_end_to_end_data.py  test_end_to_end_task.py  test_eval.py  test_field_types.nt  test_field_types.py  test_mask.py  (+24 more)
tests/images/: 6s0z_104348_33A.npy
tests/resources/: 1qjg_n38.npz  make_1qjg_n38_image.py  mask.npz  mask_3v4i.npz
