[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "atompaint"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.md'
dynamic = ["version", "description"]
requires-python = "~=3.10"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
  'docopt',
  'einops',
  'escnn @ git+https://github.com/kalekundert/escnn@0ac580d36ac682e8bae8a37192259f89d478f230',
  'lightning',
  'macromol_dataframe',
  'macromol_gym_pretrain',
  'macromol_gym_unsupervised',
  'more_itertools',
  'multipartial',
  'numpy',
  'pipeline_func',
  'polars >= 1.17',
  'scipy',
  'torch',
  'torchmetrics',
  'torchyield',
  'tqdm',
  'xxhash',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest_tmp_files',
  'pytest_unordered',
  'parametrize_from_file',
  'hypothesis',
  'matplotlib',
  'colorcet',
  'torchtest',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://atompaint.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/atompaint'
'Bug Tracker' = 'https://github.com/kalekundert/atompaint/issues'
'Continuous Integration' = 'https://github.com/kalekundert/atompaint/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/atompaint'

[tool.ruff.lint]
select = ["F"]
ignore = ["F405", "F403"]
exclude = ['_*.py']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'
filterwarnings = [
  'ignore:.*Lazy modules are a new feature.*:UserWarning:torch.nn.modules.lazy',
  'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
  'ignore:pkg_resources is deprecated as an API:DeprecationWarning',
  'ignore::DeprecationWarning:torch',
  'ignore::DeprecationWarning:autograd',
]

[tool.coverage.run]
branch = true
parallel = true
source = ['atompaint']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
branch = 'release'
version_variable = 'atompaint/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
